Factored out common code for use by SLJob
git-svn-id: https://fluid.surelogic.com/svn/eng/trunk/sierra-tool@9240 d02ae147-ee12-4a35-9452-91c89e8b2592